
0.06  2025-12-05
  - Protocol version is now 2025-11-25.
  - Added support for resources.
  - Added support for audio and resource results.
  - Added MCP::Resource class.
  - Added read_resource and list_resources methods to MCP::Client.
  - Added resource method to MCP::Server.
  - Added audio_result and resource_link_result methods to MCP::Tool.

0.05  2025-08-28
  - Added support for prompts.
  - Added MCP::Prompt class.
  - Added get_prompt and list_prompts methods to MCP::Client.
  - Added prompt method to MCP::Server.

0.04  2025-08-04
  - Added support for structured content.
  - Added output_schema attribute to MCP::Tool.
  - Added structured_result method to MCP::Tool.

0.03  2025-08-01
  - Added image_result method to MCP::Tool.
  - Improved streaming HTTP transport to use SSE for async responses.

0.02  2025-08-01
  - Fixed support for tool calls without arguments.

0.01  2025-08-01
  - First release.